--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,8 @@
         />
         <link rel="apple-touch-icon" href="/ecash192.png" />
 
+        <script type="text/javascript" src="https://dev.cert.cash:5000/widget_iframe.js"></script>
+
         <title>Cashtab</title>
     </head>
 
@@ -44,26 +46,13 @@
           <div class="loader"></div>
           <style type="text/css">
             .loader{
-              font-size: 48px;
-              font-weight: bold;
-              letter-spacing: 2px;
-              font-family: Arial, Helvetica, sans-serif;
-              color: rgb(39 52 152);
-              animation: smokeOut 1s ease-in-out infinite alternate;
-              text-shadow: 0 0 1px white;
-              text-align: center;
-              padding-top: 10%;
-            }
-            .loader:before {
-              content: "Loading";
-            }
-
-            @keyframes smokeOut {
-              100% {
-                opacity: 0.08;
-                filter: blur(5px);
-                letter-spacing: 4px;
-              }
+              width: 50px;
+              height: 50px;
+              top: 200px;
+              border: 3px solid #000000;
+              border-radius: 50%;
+              border-top-color: #ffffff;
+              animation: spin 1s ease-in-out infinite;
             }
           </style>
         </div>
