add zoid module

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         />
         <link rel="apple-touch-icon" href="/ecash192.png" />
 
-        <script type="text/javascript" src="https://dev.cert.cash:5000/widget_iframe.js"></script>
+        <!-- <script type="text/javascript" src="https://dev.cert.cash:5000/widget_iframe.js"></script> -->
 
         <title>Cashtab</title>
     </head>
