fix loader, add payment handler, debug widget height

--- a/public/index.html
+++ b/public/index.html
@@ -35,26 +35,11 @@
         />
         <link rel="apple-touch-icon" href="/ecash192.png" />
 
-        <!-- <script type="text/javascript" src="https://dev.cert.cash:5000/widget_iframe.js"></script> -->
-
         <title>Cashtab</title>
     </head>
 
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root">
-          <div class="loader"></div>
-          <style type="text/css">
-            .loader{
-              width: 50px;
-              height: 50px;
-              top: 200px;
-              border: 3px solid #000000;
-              border-radius: 50%;
-              border-top-color: #ffffff;
-              animation: spin 1s ease-in-out infinite;
-            }
-          </style>
-        </div>
+        <div id="root"></div>
     </body>
 </html>
